@@ -8,7 +8,10 @@
 extern "C" {
 #endif
 
-int update_hash_file(file_t* file);
+struct update_ctx;
+struct update_ctx* update_ctx_new(file_t* update_file);
+int update_ctx_update(struct update_ctx* ctx, file_t* file); /* returns -1 on error */
+int update_ctx_free(struct update_ctx* ctx);
 
 #ifdef __cplusplus
 } /* extern "C" */
